...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="8Nh-vT-wF4" id="ogE-9C-ozw"/>
                            <outlet property="delegate" destination="8Nh-vT-wF4" id="rVI-fL-aj3"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Todos" id="0sT-eR-iGS"/>
                    <connections>
                        <outlet property="view" destination="7UF-En-33l" id="XSA-G1-28u"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dXk-mF-B4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
